--- a/main.yml
+++ b/main.yml
@@ -8,4 +8,5 @@
     - { role: apps, tags: ["apps"] }
     - { role: hipchat, tags: ["hipchat"] }
     - { role: chrome, tags: ["chrome"] }
+    - { role: vivaldi, tags: ["vivaldi"] }
     - { role: docker, tags: ["docker"] }
