--- a/main.yml
+++ b/main.yml
@@ -12,3 +12,4 @@
     - { role: docker, tags: ["docker"] }
     - { role: golang, tags: ["golang"] }
     - { role: insync, tags: ["insync"] }
+    - { role: spotify, tags: ["spotify"] }
