--- a/main.yml
+++ b/main.yml
@@ -15,3 +15,4 @@
     - { role: spotify, tags: ["spotify"] }
     - { role: whatsie, tags: ["whatsie"] }
     - { role: anatine, tags: ["anatine"] }
+    - { role: tilix, tags: ["tilix"] }
