--- a/main.yml
+++ b/main.yml
@@ -16,3 +16,4 @@
     - { role: whatsie, tags: ["whatsie"] }
     - { role: anatine, tags: ["anatine"] }
     - { role: tilix, tags: ["tilix"] }
+    - { role: skype, tags: ["skype"] }
