--- a/main.yml
+++ b/main.yml
@@ -3,17 +3,5 @@
 
   roles:
     - { role: setup, tags: ["setup"] }
-    - { role: atom, tags: ["atom"] }
-    - { role: java, tags: ["java"] }
     - { role: apps, tags: ["apps"] }
-    - { role: hipchat, tags: ["hipchat"] }
-    - { role: chrome, tags: ["chrome"] }
-    - { role: vivaldi, tags: ["vivaldi"] }
-    - { role: docker, tags: ["docker"] }
-    - { role: golang, tags: ["golang"] }
-    - { role: insync, tags: ["insync"] }
-    - { role: spotify, tags: ["spotify"] }
-    - { role: whatsie, tags: ["whatsie"] }
-    - { role: anatine, tags: ["anatine"] }
-    - { role: tilix, tags: ["tilix"] }
-    - { role: skype, tags: ["skype"] }
+    - { role: development, tags: ["dev"] }
