--- a/roles/apps/tasks/fedora.yml
+++ b/roles/apps/tasks/fedora.yml
@@ -22,6 +22,10 @@
   tags:
     - telegram
 
+- include_tasks: fedora/tilix.yml
+  tags:
+    - tilix
+
 - include_tasks: fedora/vim.yml
   tags:
     - vim
