Removing new lines

--- a/roles/apps/tasks/fedora.yml
+++ b/roles/apps/tasks/fedora.yml
@@ -1,31 +1,27 @@
 - include_tasks: fedora/atom.yml
   tags:
     - atom
-
 - include_tasks: fedora/chrome.yml
   tags:
     - chrome
-
+- include_tasks: fedora/hipchat.yml
+  tags:
+    - hipchat
 - include_tasks: fedora/midori.yml
   tags:
     - midori
-
 - include_tasks: fedora/shutter.yml
   tags:
     - shutter
-
 - include_tasks: fedora/skype.yml
   tags:
     - skype
-
 - include_tasks: general/telegram.yml
   tags:
     - telegram
-
 - include_tasks: fedora/tilix.yml
   tags:
     - tilix
-
 - include_tasks: fedora/vim.yml
   tags:
     - vim
