Enabling docker service to survive restart

--- a/roles/development/tasks/fedora/docker.yml
+++ b/roles/development/tasks/fedora/docker.yml
@@ -12,3 +12,8 @@
   dnf:
     name: docker-compose
     state: latest
+
+- name: Enabling Docker service
+  systemd:
+    name: docker
+    enabled: yes
