adding atom's atom-jinja2 package

--- a/roles/apps/tasks/general/apm.yml
+++ b/roles/apps/tasks/general/apm.yml
@@ -37,6 +37,7 @@
     with_items:
       - ide-python
       - linter-pycodestyle
+      - atom-jinja2
     tags:
       - python
       - apm-packages
