Adding Sublime Text 3 app

--- a/roles/apps/tasks/fedora.yml
+++ b/roles/apps/tasks/fedora.yml
@@ -19,6 +19,9 @@
 - include_tasks: fedora/skype.yml
   tags:
     - skype
+- include_tasks: fedora/sublime.yml
+  tags:
+    - sublime
 - include_tasks: general/telegram.yml
   tags:
     - telegram
