Changing the value of owner and group to an ansible variable.

--- a/roles/apps/tasks/general/telegram.yml
+++ b/roles/apps/tasks/general/telegram.yml
@@ -7,5 +7,5 @@
   unarchive:
     src: /tmp/telegram.tar.xz
     dest: /opt
-    owner: frederico.ferreira
-    group: frederico.ferreira
+    owner: "{{ lookup('env','USER') }}"
+    group: "{{ lookup('env','USER') }}"
