Adding pretty-json package to Atom

--- a/roles/apps/tasks/general/apm.yml
+++ b/roles/apps/tasks/general/apm.yml
@@ -41,3 +41,12 @@
     tags:
       - python
       - apm-packages
+
+  - name: Installing Atom's JSON's package
+    raw: /usr/bin/apm install {{ item }}
+    become: no
+    with_items:
+      - pretty-json
+    tags:
+      - python
+      - apm-packages
