--- a/roles/apps/tasks/ubuntu/tilix.yml
+++ b/roles/apps/tasks/ubuntu/tilix.yml
@@ -2,6 +2,7 @@
   apt_repository:
     repo: "ppa:webupd8team/terminix"
     state: present
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04'
 
 - name: install Tilix
   apt:
