apt-repository only use dwhen ubuntu is 14.04 fixing task name

--- a/roles/setup/tasks/ubuntu/flatpak.yml
+++ b/roles/setup/tasks/ubuntu/flatpak.yml
@@ -1,8 +1,9 @@
 - apt_repository:
     repo: "ppa:alexlarsson/flatpak"
     state: present
+  when: {{ ansible_distribution_version is version('14.04', '==') }} is true
 
-- name: install Atom
+- name: install Flatpak
   apt:
     name: '{{ item }}'
     update_cache: yes
