--- a/roles/setup/tasks/ubuntu/flatpak.yml
+++ b/roles/setup/tasks/ubuntu/flatpak.yml
@@ -1,7 +1,7 @@
 - apt_repository:
     repo: "ppa:alexlarsson/flatpak"
     state: present
-  when: {{ ansible_distribution_version is version('17.10', '<=') }} is true
+  when: ansible_distribution_version is version('17.10', '<=')
 
 - name: install Flatpak
   apt:
