--- a/roles/development/tasks/ubuntu.yml
+++ b/roles/development/tasks/ubuntu.yml
@@ -4,3 +4,12 @@
 - include_tasks: general/python_packages.yml
   tags:
     python
+- include_tasks: ubuntu/docker.yml
+  tags:
+    - docker
+- include_tasks: ubuntu/golang.yml
+  tags:
+    - golang
+- include_tasks: ubuntu/java.yml
+  tags:
+    - java
