--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -1,5 +1,5 @@
-- include_tasks: ubuntu.yml
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
-
-- include_tasks: fedora.yml
-  when: ansible_distribution == 'Fedora' or ansible_distribution == 'Red Hat Enterprise Linux'
+- include_tasks: 00-upgrade.yml
+  when: skip_upgrade is not defined and (skip_upgrade != 'yes' or skip_upgrade != 'true')
+  
+- include_tasks: 01-config.yml
+  when: skip_config is not defined and (skip_config != 'yes' or skip_config != 'true')
